added support for securely exporting and importing vaults
